[package]
name = "brainfuck-interpreter"
version = "0.1.0"
authors = ["Jacob Meyers <jmeyers35@gatech.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"

[profile.release]
lto = "fat"
codegen-units = 1